<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/common_pading"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/radio_size_img"
            android:elevation="@dimen/card_elevation"
            android:layout_margin="@dimen/common_pading"
            >

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/size_img"
        android:layout_height="@dimen/size_img"
        android:src="@drawable/perfil"
        android:scaleType="centerCrop"
        />

    </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nombre"
            android:layout_margin="@dimen/common_margin"
            />
        <TextView
            android:id="@+id/profile_tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_md"
            android:text="Nombre"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_correo"
            android:layout_margin="@dimen/common_margin"
            />
        <TextView
            android:id="@+id/profile_tv_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_sm"
            android:text="direccioncorreo.com"
            android:autoLink="email"
            android:textColorLink="#3F51B5"
            android:textStyle="italic|bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sitio_web"
            android:layout_margin="@dimen/common_margin"
            />
        <TextView
            android:id="@+id/profile_tv_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_sm"
            android:text="www.paginaweb.com"
            android:textColorLink="#236E26"
            android:autoLink="web"
            android:textStyle="italic|bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone"
            android:layout_margin="@dimen/common_margin"
            />
        <TextView
            android:id="@+id/profile_tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_sm"
            android:text="+55 55 55 55 55 55"
            android:textColorLink="#2196F3"
            android:autoLink="phone"
            android:textStyle="italic|bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:text="@string/text_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_mostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_show_location"
            android:layout_margin="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            android:textSize="@dimen/text_size_md"
            android:drawableEnd="@drawable/icon_map"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:text="@string/text_enable_location"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawableStart="@drawable/icon_settings"

            />

        </LinearLayout>

</ScrollView>